RESOLVED FIXED 245769
REGRESSION (STP): Animating image inside clipping border-radius ignores overflow hidden
https://bugs.webkit.org/show_bug.cgi?id=245769
Summary REGRESSION (STP): Animating image inside clipping border-radius ignores overf...
mic.gallego
Reported 2022-09-27 23:15:26 PDT
Created attachment 462672 [details] Hover fails Hi, Latest Safari TP has caused a regression on transform, which ignore overflow of parent (I think it may be related to the various fixes done on border radius in latest TP). I have been unable to recreate a minimal test case so it seems to be a combinaison of various factors. To reproduce it, open this page: https://impact-theme-sound.myshopify.com/pages/paris-saint-germain (if you see a password use rewblo to enter into the store). Then scroll to the "Master & Dynamics X Paris Saint Germain" at the end of the page, and hover the block (see attached screenshot). Despite the image being in a overflow: hidden container, during the complete animation it is visible outside the parent bounds.
Attachments
Hover fails (2.20 MB, image/png)
2022-09-27 23:15 PDT, mic.gallego
no flags
Test reduction (1.06 KB, text/html)
2022-10-03 18:09 PDT, Simon Fraser (smfr)
no flags
Alexey Proskuryakov
Comment 1 2022-09-28 10:32:37 PDT
I can reproduce with STP 154. Testing notice: logging in sends you back to the landing page, so you need to go to https://impact-theme-sound.myshopify.com/pages/paris-saint-germain again.
Radar WebKit Bug Importer
Comment 2 2022-09-28 10:32:51 PDT
Simon Fraser (smfr)
Comment 3 2022-10-03 18:09:05 PDT
Created attachment 462775 [details] Test reduction
Simon Fraser (smfr)
Comment 4 2022-10-31 15:37:10 PDT
EWS
Comment 5 2022-11-01 16:29:00 PDT
Committed 256202@main (c91af32319e7): <https://commits.webkit.org/256202@main> Reviewed commits have been landed. Closing PR #5983 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.