REGRESSION (STP): Animating image inside clipping border-radius ignores overflow hidden https://bugs.webkit.org/show_bug.cgi?id=245769 rdar://100514998

Reviewed by Alan Baradlay.

When composited layers are clipped by non-stacking-context ancestors, we build an "ancestor clipping stack"
to represent those clips. Contiguous sets of non-scrollable, non-radius clips can be collapsed into
a single entry as the intersection of the clip rects, which is what `pushNonScrollableClip()` does
in `RenderLayerCompositor::computeAncestorClippingStack()`.

While walking up the ancestor chain, if we encounter a clip-with-radius or overflow:scroll,
we need to push any pending non-scrollable clip, but the border-radius clause here failed
to do that, resulting in an incorrect attempt to push a clip with an infinite rect at
the end.

Fix by ensuring that the `hasBorderRadius()` clause calls `pushNonScrollableClip()` just as
the `hasCompositedScrollableOverflow()` one does.

* LayoutTests/compositing/clipping/clip-stack-hidden-and-radius-expected.html: Added.
* LayoutTests/compositing/clipping/clip-stack-hidden-and-radius.html: Added.
* Source/WebCore/rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::computeAncestorClippingStack const):

Canonical link: https://commits.webkit.org/256202@main